Update wallet create page

--- a/src/scss/bootstrap/_main.scss
+++ b/src/scss/bootstrap/_main.scss
@@ -30,7 +30,7 @@
 @import "core/pagination";
 @import "core/badge";
 // @import "core/jumbotron";
-// @import "core/alert";
+@import "core/alert";
 // @import "core/progress";
 // @import "core/media";
 // @import "core/list-group";
@@ -49,3 +49,4 @@
 @import "nav";
 @import "button";
 @import "pagination";
+@import "alert";
