--- a/src/scss/bootstrap/_tables.scss
+++ b/src/scss/bootstrap/_tables.scss
@@ -265,7 +265,7 @@
 
 .table.table-padded {
   border-collapse:separate;
-  border-spacing: 0 5px;
+  border-spacing: 0 0.5rem;
   thead {
     tr {
       th {
