--- a/src/scss/_elements.scss
+++ b/src/scss/_elements.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
 }
 
-.transaction-row,
+.transfer-row,
 .account-row {
   a {
     color: inherit !important;
@@ -11,7 +11,7 @@
   }
 }
 
-.transaction-row {
+.transfer-row {
   td {
     padding: 0.75rem 0.6rem !important;
   }
